--- a/.env.sample
+++ b/.env.sample
@@ -69,7 +69,7 @@ SMTP_FROM_EMAIL=
 SMTP_REPLY_EMAIL=
 
 # Custom logo that displays on the authentication screen, scaled to height: 60px
-# TEAM_LOGO=https://example.com/images/logo.png
+# TEAM_LOGO=https://github.com/kir-fesenko/outline-env/blob/master/logo.png
 
 # See translate.getoutline.com for a list of available language codes and their
 # percentage translated.
